# cargo-unfmt

./: .gitignore  COPYING  Cargo.toml  README.md  avg-line-width.py  junk.py  justfile
src/: emit.rs  formatters.rs  ir.rs  lex.rs  lib.rs  location.rs  main.rs  morpheme.rs  tokenizer.rs  visitors.rs
test_files/: short-rust-file.rs
tests/: crate.rs
