[package]
name = "cargo-unfmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
proc-macro2 = { version = "1.0.78", features = ["span-locations"] }
quote = "1.0.35"
rustc_lexer = "0.1.0"
syn = { version = "2.0.48", features = ["visit", "full", "extra-traits"] }
walkdir = "2.4.0"
