[package]
name = "cargo-unfmt"
authors = ["Felix Prasanna <fpx@mit.edu>"]
description = "unformat code into perfect rectangles"
repository = "https://github.com/fprasx/cargo-unfmt"
documentation = "https://docs.rs/cargo-unfmt"
license = "GPL-3.0-or-later"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anstyle = "1.0.6"
anyhow = "1.0.79"
clap = { version = "4.5.4", features = ["cargo"] }
proc-macro2 = { version = "1.0.78", features = ["span-locations"] }
quote = "1.0.35"
regex = "1.10.4"
rustc_lexer = "0.1.0"
syn = { version = "2.0.48", features = ["visit", "full", "extra-traits"] }
walkdir = "2.4.0"
